# Programming-Callenges

./: .gitignore  README
p0000100/: CMakeLists.txt  main_p0000100_v2.cpp
p0000101/: CMakeLists.txt
p0000706/: CMakeLists.txt  input.txt  main_p0000706.cpp  main_p0000706_v2.cpp  output.txt
p00100/: CMakeLists.txt  CMakeLists.txt~  main_p00100.cpp  main_p00100.cpp~
p0010137/: .main_p0010137_v2.cpp.kate-swp  CMakeLists.txt  input.txt  main_p0010137.cpp  main_p0010137_v2.cpp  output.txt
p0010189/: CMakeLists.txt  input.txt  main_p0010189.cpp  main_p0010189_v2.cpp  main_p0010189_v3.cpp
p0010196/: CMakeLists.txt  input.txt  main_p0010196.cpp  main_p0010196_v2.cpp  main_p0010196_v3.cpp  output.txt
p0010267/: CMakeLists.txt  input.txt  input2.txt  main_p0010267.cpp  main_p0010267_v2.cpp  main_p0010267_v3.cpp  output.txt
void/: main_p0010189.cpp
